2008-02-07:
	* src/kuserok.c(_pam_krb5_kuserok): add a function which wraps
	krb5_kuserok() in a subprocess which can create a new PAG, get tokens,
	and drop privileges to the user's account, all so that we can attempt
	to read the user's .k5login if we need to, and without disturbing any
	AFS creds the calling process might have.
	* src/auth.c(pam_sm_authenticate),src/acct.c(pam_sm_acct_mgmt): use
	_pam_krb5_kuserok() instead of trying to get tokens, call
	krb5_kuserok(), and clear tokens

2007-12-11:
	* src/auth.c: don't ask for another password when we've already
	gotten an unknown-user error, since there's no point then (Paul
	Batkowski, #400611)

2007-12-05:
	* src/pam_krb5.5.in,src/pam_krb5.8.in: give an example ("no_debug")
	to make it more clear that you can add exceptions to "true" settings
	that way.  Stress that no_subsequent_prompt may be needed for apps
	which do the "PAM_PROMPT_ECHO_OFF" means "what's the current
	password?" dance, which can really screw us up when we can't disable
	the change-password-during-get_init_creds behavoir.
	* src/v5.c(v5_alloc_get_init_creds_opt): call the library's struct
	init function for the we-malloc-it case.
	* src/initopts.c(_pam_krb5_set_init_opts): disable the library's own
	change-password-during-get_init_creds behavior, if we're building with
	one which lets us disable it, so that we can handle it ourselves.

2007-12-04:
	* src/options.c(option_b): take a service name, and a default enable
	and disable list.  If we have no command-line argument, check for the
	service's name in the list of values given in the config file, then
	check for a regular boolean setting in the configuration file, and
	lastly check our default configuration using the default enable and
	disable lists.
	* src/pam_krb5.5.in,src/pam_krb5.8.in: note that boolean options take
	lists of service names now.

2007-11-09:
	* src/auth.c: fetch tokens when "tokens" is enabled and we're not