@@ -1,4 +1,7 @@
 2008-02-07:
+	* src/minikafs.c: don't barf on compile if NI_MAXHOST isn't defined.
+
+2008-02-07:
 	* src/kuserok.c(_pam_krb5_kuserok): add a function which wraps
 	krb5_kuserok() in a subprocess which can create a new PAG, get tokens,
 	and drop privileges to the user's account, all so that we can attempt
